--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,3 +3,44 @@
     Noto Sans TC,
     serif;
 }
+
+body {
+  background-color: #2a2a2a;
+  color: white;
+  min-width: 320px;
+  font-size: 16px;
+}
+
+.container {
+  margin: 0 auto;
+}
+
+.card {
+  border: 1px solid #ccc;
+  border-radius: 1.5rem;
+  padding: 1rem;
+  margin: 2rem 0;
+}
+
+h2 {
+  font-size: 1.5rem;
+  text-align: center;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+table {
+  border-collapse: collapse;
+  line-height: 3;
+}
+
+td {
+  border-bottom: 1px solid #777;
+  padding: .5rem;
+}
+
+@media (min-width: 640px) {
+  .card {
+    padding: 2rem 3rem;
+  }
+}
